# investing

./: .gitignore  LICENSE.txt  README.md  api_utils.py  app.py  main.ipynb  pyproject.toml  requirements.txt
notebooks/: main.ipynb
src/analysis/: analysis_utils.py  company_analyzer.py
src/api/: api_utils.py
src/filters/: __init__.py  additional_filters.py  base.py  core_filters.py
