[tool.poetry]
name = "investing"
version = "0.1.0"
description = "Value investing analysis using Financial data APIs."
authors = ["Lidija Jovanovska"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "2.2.3"
python-dotenv = "1.0.1"
tqdm = "4.67.1"
plotly = "5.24.1"
notebook = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
